--- a/minishell - Copia/Makefile
+++ b/minishell - Copia/Makefile
@@ -19,8 +19,8 @@ SRC = ft_atoi.c ft_strncmp.c ft_lstadd_back.c ft_isdigit.c ft_strjoin.c ft_itoa.
 	  get_args.c get_args_utilis.c get_args_expander.c get_args_redirect.c \
 	  main.c u_input.c split_cmd.c marshal.c executor.c \
 	  get_next_line.c get_next_line_utils.c \
+	  builtins1.c builtins2.c builtins3.c \
 	  utilitis.c utilitis1.c \
-	  builtins1.c builtins2.c \
 	  builtins_utilitis.c
 OBJ = $(SRC:.c=.o)
 
