vogllio mangiare il tuo pancreas

--- a/C++ - Module 00/ex01/Makefile
+++ b/C++ - Module 00/ex01/Makefile
@@ -19,7 +19,7 @@ OBJ = $(SRC:.c=.o)
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	gcc $(CFLAGS) -o $(NAME) $(OBJ)
+	g++ $(CFLAGS) -o $(NAME) $(OBJ)
 
 clean:
 	rm -f $(OBJ)
