--- a/C++ - Module 00/ex02/Makefile
+++ b/C++ - Module 00/ex02/Makefile
@@ -10,10 +10,10 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Megaphone
+NAME = TheJobOfYourDreams
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = megaphone.cpp
+SRC = test.cpp Account.cpp
 OBJ = $(SRC:.c=.o)
 
 all: $(NAME)
