--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,14 +6,14 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/03/28 16:01:13 by aanghi           ###   ########.fr        #
+#    Updated: 2024/04/02 17:15:42 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 MAKEFLAGS += -s
 
 NAME = minishell
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -g
 
 SRC = ft_atoi.c ft_strncmp.c ft_lstadd_back.c ft_isdigit.c ft_strjoin.c ft_itoa.c ft_strlen.c ft_split.c ft_substr.c \
 	  get_args.c get_args_utilis.c get_args_expander.c get_args_redirect.c \
