voglio mangiare il tuo pancreas

--- a/C++ - Module 01/ex01/Makefile
+++ b/C++ - Module 01/ex01/Makefile
@@ -13,7 +13,7 @@
 NAME = BraiiiiiiinnnzzzZ
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+SRC = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp zombieHorde.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
