see you later... space coyboy

--- a/cub3d/Makefile
+++ b/cub3d/Makefile
@@ -6,7 +6,7 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/04/16 17:35:42 by aanghi           ###   ########.fr        #
+#    Updated: 2024/04/17 13:28:22 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,10 +19,11 @@ ARG = maps/2.cub
 MINILIBX_PATH = ./mlx
 MINILIBX = $(MINILIBX_PATH)/libmlx.a
 
-SRC = ft_split.c ft_strlen.c ft_strncmp.c ft_substr.c ft_strjoin.c ft_atoi.c \
-	  main.c marshal.c controlls.c print_minimap.c print_map.c \
+SRC = \
+	  ft_split.c ft_strlen.c ft_strncmp.c ft_substr.c ft_strjoin.c ft_atoi.c \
+	  main.c marshal.c controlls.c print_map.c game_init.c \
 	  get_next_line.c get_next_line_utils.c \
-	  game_init.c \
+	  print_minimap.c print_map_utilitis.c \
 	  utilitis.c utilitis1.c
 
 OBJ = $(SRC:.c=.o)
