voglio mangiare il tuo pancreas

--- a/C++ - Module 03/ex01/Makefile
+++ b/C++ - Module 03/ex01/Makefile
@@ -10,10 +10,10 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Aaaaand..._OPEN!
+NAME = Serena,_my_love!
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp ClapTrap.cpp
+SRC = main.cpp ClapTrap.cpp ScavTrap.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
