--- a/C++ - Module 06/ex00/Makefile
+++ b/C++ - Module 06/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: aanghi <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/18 17:55:23 by aanghi            #+#    #+#              #
-#    Updated: 2024/05/08 14:07:16 by aanghi           ###   ########.fr        #
+#    Updated: 2024/05/08 17:16:28 by aanghi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -48,4 +48,6 @@ test: re
 	./$(NAME) +inff
 	./$(NAME) +inf
 	./$(NAME) -inf
+	./$(NAME) '*'
+	./$(NAME) 'voglio mangiare il tuo pancreas'
 	@rm -f $(NAME)
