--- a/Inception/NGINX/Dockerfile
+++ b/Inception/NGINX/Dockerfile
@@ -1,8 +1,7 @@
-FROM nginx
+FROM debian:latest
 
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY default.conf /etc/nginx/conf.d/default.conf
+RUN apt-get update \
+	apt-get install nginx
 
 EXPOSE 443
-
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["bash"]
