--- a/Inception/MariaDB/Dockerfile
+++ b/Inception/MariaDB/Dockerfile
@@ -1,7 +1,8 @@
-FROM debian:latest
-
-RUN apt-get update \
-    apt-get install mariadb-server
-
+FROM debian:buster
 COPY configure.sh /tmp/configure.sh
-CMD ["sh", "/tmp/configure.sh"]
+RUN apt-get update && \ 
+	apt-get install mariadb-server -y && \
+	service mysql start && \
+	sh /tmp/configure.sh
+EXPOSE 3306
+CMD /usr/bin/mysqld_safe
