--- a/Inception/.env
+++ b/Inception/.env
@@ -1,16 +1,15 @@
-MYSQL_HOST=mariadb
-MYSQL_ROOT_PWD=mariadb
+WP_DB_USR=wordpress
+WP_DB_PASS=wordpress
+WP_DB=wordpress
 
-WP_DATABASE_NAME=wordpress
-WP_DATABASE_USR=wordpress
-WP_DATABASE_PWD=wordpress
+MYSQL_HOST=mariadb
 
 DOMAIN_NAME=localhost
 
 WP_TITLE=Insepcion
 WP_ADMIN_USR=wpa
 WP_ADMIN_PWD=wpa
-WP_ADMIN_EMAIL=wp@gmail.com
+WP_ADMIN_EMAIL=wpa@gmail.com
 WP_USR=wp
 WP_PWD=wp
 WP_EMAIL=wp@gmail.com
