--- a/Inception/WordPress/Dockerfile
+++ b/Inception/WordPress/Dockerfile
@@ -1,13 +1,18 @@
-FROM debian:latest
+FROM debian:11
 
-RUN apt-get update \
-	apt-get install wget \
-	apt-get install php-fpm \
-	wget https://wordpress.org/latest.tar.gz \
-	tar -xzvf latest.tar.gz \
-	mv wordpress/* /var/www/html/ \
-	cd /var/www/html \
-	mv wp-config-sample.php wp-config.php \
+RUN apt-get update && \
+	apt-get install -y wget && \
+	apt-get install -y php-fpm && \
+	wget https://wordpress.org/latest.tar.gz && \
+	tar -xzvf latest.tar.gz && \
+	cd /var && \
+	mkdir www && \
+	cd /var/www && \
+	mkdir html && \
+	chmod 777 /var/www/html && \
+	cd ../.. && \
+	mv wordpress /var/www/html/wordpress && \
+	cd /var/www/html/wordpress && \
+	mv wp-config-sample.php wp-config.php
 
 EXPOSE 9000
-CMD ["bash"]
