--- a/Inception/MariaDB/Dockerfile
+++ b/Inception/MariaDB/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:buster
-COPY configure.sql /tmp/configure.sql
+COPY configure.sh /tmp/configure.sh
 RUN apt-get update && \ 
 	apt-get install mariadb-server -y && \
 	service mysql start && \
-	mariadbd --user=mysql --bootstrap > /tmp/configure.sql
+	sh /tmp/configure.sh
 EXPOSE 3306
 CMD /usr/bin/mysqld_safe
