--- a/Inception/docker-compose.yml
+++ b/Inception/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     build:
       context: WordPress/
       dockerfile: Dockerfile
-    command: tail -f /dev/null
+    command: sh configure.sh
     container_name: wordpress
     restart: always
     networks:
@@ -31,13 +31,13 @@ services:
     env_file:
       - .env
     environment:
-      WP_DB_PASS:  ${WP_DB_PASS}
-      WP_DB_USR:  ${WP_DB_USR}
+      WP_DB_PASS: ${WP_DB_PASS}
+      WP_DB_USR: ${WP_DB_USR}
       WP_DB: ${WP_DB}
     ports:
       - "9000:9000"
     volumes:
-      - /home/aanghi/data/wp:/var/www/html/wordpress
+      - /home/aanghi/data/wp:/wordpress2
     depends_on:
       - mariadb
 
@@ -49,7 +49,7 @@ services:
     container_name: nginx
     restart: always
     volumes:
-      - /home/aanghi/data/wp:/var/www/html/wordpress
+      - /home/aanghi/data/wp:/var/www/html/wordpress/
     networks:
       - inception
     ports:
