--- a/Inception/MariaDB/Dockerfile
+++ b/Inception/MariaDB/Dockerfile
@@ -1,7 +1,6 @@
 FROM debian:buster
 COPY configure.sh configure.sh
 RUN apt-get update && \ 
-	apt-get install mariadb-server -y && \
-	service mysql start
+	apt-get install mariadb-server -y
 
 EXPOSE 3306
