--- a/Inception/NGINX/nginx.conf
+++ b/Inception/NGINX/nginx.conf
@@ -1,16 +1,19 @@
-user  nginx;
-worker_processes  1;
+server {
+    listen 80;
+    server_name aanghi.42.fr;
 
-events {
-    worker_connections  1024;
-}
+    root /var/www/html/wordpress;
+    index index.php index.html index.htm;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
 
-    sendfile        on;
-    keepalive_timeout  65;
-
-    include /etc/nginx/conf.d/*.conf;
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
 }
