--- a/Inception/docker-compose.yml
+++ b/Inception/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     depends_on:
       - wordpress
     extra_hosts:
-      - "oid.ocrop:127.0.0.1"
+      - "aanghi.42.fr:127.0.0.1"
 
 networks:
   inception:
