--- a/Inception/WordPress/php-fpm.conf
+++ b/Inception/WordPress/php-fpm.conf
@@ -1,13 +1,12 @@
+; php-fpm.conf
 [global]
 daemonize = no
 
 [www]
-listen = 0.0.0.0:9000
-listen.owner = nobody
-listen.group = nobody
-listen.mode = 0660
-user = nobody
-group = nobody
+listen = 127.0.0.1:9000
+listen.allowed_clients = 127.0.0.1
+user = nginx
+group = nginx
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
