--- a/Inception/NGINX/default.conf
+++ b/Inception/NGINX/default.conf
@@ -10,12 +10,12 @@ server {
     ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256';
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /var/www/html/wordpress;
         index  index.html index.htm;
     }
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   /var/www/html/wordpress;
     }
 }
