--- a/Inception/Makefile
+++ b/Inception/Makefile
@@ -13,7 +13,10 @@ stop:
 	docker compose down -v --rmi all
 
 prune:
-	docker image prune --all --force
-	docker system prune --all --force --volumes
+	-docker stop $$(docker ps -q)
+	-docker rm $$(docker ps -a -q)
+	-docker rmi $$(docker images -q)
+	-docker image prune --all --force
+	-docker system prune --all --force --volumes
 
 test: start show stop
