--- a/Inception/NGINX/nginx.conf
+++ b/Inception/NGINX/nginx.conf
@@ -9,23 +9,25 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
+    access_log  /var/log/nginx/access.log  main;
 
-    sendfile on;
-    keepalive_timeout 65;
+    sendfile        on;
+    keepalive_timeout  65;
 
-    server {
+    include /etc/nginx/conf.d/*.conf;
+
+	server {
         listen 443;
 
         location / {
-            proxy_pass http://127.0.0.1:9000;
+            proxy_pass https://wordpress:9000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
