--- a/Inception/NGINX/default.conf
+++ b/Inception/NGINX/default.conf
@@ -11,16 +11,14 @@ server {
 
 	root /var/www/html/wordpress;
 
-    location / {
-        proxy_pass https://wordpress:9000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+	location / {
+        try_files $uri $uri/ /index.php?$args;
     }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root   /var/www/html/wordpress;
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
