--- a/Inception/WordPress/php-fpm.conf
+++ b/Inception/WordPress/php-fpm.conf
@@ -4,7 +4,7 @@ daemonize = no
 
 [www]
 listen = 0.0.0.0:9000
-listen.allowed_clients = 127.0.0.1
+listen.allowed_clients = any
 user = nginx
 group = nginx
 pm = dynamic
@@ -12,3 +12,4 @@ pm.max_children = 5
 pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
+chdir = /var/www/html/wordpress
