--- a/Inception/NGINX/nginx.conf
+++ b/Inception/NGINX/nginx.conf
@@ -22,16 +22,18 @@ http {
     keepalive_timeout  65;
 
     include /etc/nginx/conf.d/*.conf;
-
+	
 	server {
+		root /var/www/html/wordpress;
         listen 443;
-
-        location / {
-            proxy_pass https://wordpress:9000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+		location / {
+			try_files $uri $uri/ /index.php?$args;
+		}
+        location ~ \.php$ {
+			include fastcgi_params;
+			fastcgi_pass wordpress:9000;
+			fastcgi_index index.php;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		}
     }
 }
