--- a/Inception/MariaDB/my.cnf
+++ b/Inception/MariaDB/my.cnf
@@ -3,11 +3,15 @@ user=root
 # Set the TCP/IP address to listen on all available network interfaces
 bind-address=0.0.0.0
 
+skip-networking
+skip-aria
+aria-encrypt-tables=0
+
 # Set the TCP/IP port number (default: 3306)
 port=3306
 
 # Set the MySQL data directory
-datadir=/var/lib/mysql
+# datadir=/var/lib/mysql
 
 # Set the socket file path
 socket=/var/run/mysqld/mysqld.sock
