--- a/Inception/NGINX/default.conf
+++ b/Inception/NGINX/default.conf
@@ -9,10 +9,10 @@ server {
     ssl_prefer_server_ciphers off;
     ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
 
-	root /var/www/html/wordpress;
+    root /var/www/html/wordpress;
 
-	location / {
-        try_files $uri $uri/ /index.php?$args;
+    location / {
+        try_files $uri $uri/ =404;
     }
 
     location ~ \.php$ {
@@ -20,5 +20,9 @@ server {
         fastcgi_pass wordpress:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
