--- a/Inception/NGINX/nginx.conf
+++ b/Inception/NGINX/nginx.conf
@@ -1,5 +1,5 @@
 user  nginx;
-worker_processes  1;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -12,6 +12,8 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+	index index.php index.html;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -19,21 +21,11 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
+    #tcp_nopush     on;
+
     keepalive_timeout  65;
 
+    #gzip  on;
+
     include /etc/nginx/conf.d/*.conf;
-	
-	server {
-		root /var/www/html/wordpress;
-        listen 443;
-		location / {
-			try_files $uri $uri/ /index.php?$args;
-		}
-        location ~ \.php$ {
-			include fastcgi_params;
-			fastcgi_pass wordpress:9000;
-			fastcgi_index index.php;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		}
-    }
 }
